[tool.poetry]
name = "leetcode-pattern-problems-techinterview"
version = "0.1.0"
description = "Just pattern problems on python3 and more"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
union = "^0.1.10"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
